# doit_watch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request.yaml  release.yaml
doit_watch/: __init__.py  cmd_watch.py  filewatch.py
tests/: test_cmd_auto.py
