[tool.poetry]
name = "doit-watch"
version = "0.1.0"
description = "A watch plugin for the Python task manager doit"
authors = ["Rico Hermans <rix0rrr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doit_watch"}]


[tool.poetry.dependencies]
python = "^3.9"
watchfiles = "^0.21.0"
multiprocess = "^0.70.15"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
doit = "0.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
